add bearer token

--- a/ComunautrucheAPI/appsettings.json
+++ b/ComunautrucheAPI/appsettings.json
@@ -5,8 +5,16 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
+    "JwtSettings": {
+        "SecretKey": "Ght2!d4fRt9Wg7&9mZPqV3bJ!w4Xj8oN5M6XbZfGshCwBZT1dWxR1v6ZFm6F1eZ",
+        "Issuer": "myapi",
+        "Audience": "admin",
+        "ExpirationInMinutes": 120
+    },
     "ConnectionStrings": {
         "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=autrucheDb;Trusted_Connection=True;TrustServerCertificate=True;"
     },
     "AllowedHosts": "*"
+
+
 }
